<resources>
    <string name="app_name">HomestayNearby</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Muhammad Ehsan B Aziz</string>
    <string name="nav_header_subtitle">ehsanaziz96@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Update</string>
    <string name="action_logout">Delete</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signin">Sign in</string>
    <!-- Strings related to login -->
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Contact No.</string>
    <string name="register">Registration</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="registration_success">Thank you for your registration!</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_map">Maps</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_list">Listing</string>
    <string name="auth_failed">Authenticating Failed</string>
    <string name="minimum_password">Minimum Password</string>

    <string name="fully">Fully Furnished</string>
    <string name="partially">Partially Furnished</string>

    <string name="ac">Aircond</string>
    <string name="cooking">Cooking Allowed</string>
    <string name="internet">Internet</string>
    <string name="wm">Washing Machine</string>

    <string name="propertyTitle">Choose a property category</string>
    <string-array name="propertyCat">
        <item>Select Property Category</item>
        <item>Bungalow / Villa</item>
        <item>Double Storey</item>
        <item>Single Storey</item>
        <item>Semi-D</item>
    </string-array>

    <string name="bedroomsTitle">Choose a number badrooms</string>
    <string-array name="bedroomsCat">
        <item>Select Bedrooms</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="bathroomTitle">Choose a number bathrooms</string>
    <string-array name="bathroomCat">
        <item>Select Bathroom</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM HH:mm</string>
    <string name="period" translatable="false">%1$s – %2$s</string>

    <string name="content">Here are some guidelines to follow in this Homestay, as well as other details to know \n
    - No Smoking \n
    - No pets \n
    - No parties or events (Permission) \n
    - Check-in time is 2PM - 5PM \n
    - Check out by 12PM(noon) \n
    - Self check-in with lockbox \n</string>

    <string name="content1">Strict - Free cancellation for 48 hours\n
        \n
    After that, cancel up to 7 days before check-in and get a 50% refund, minus the service fee.\n
        \n
    Accepted - Reservation confirmed\n
    \t\t\t\t\t\tFull refund if check-in is at least 14 days away\n
        \n
    Warning - 48 hours later\n
    \t\t\t\t\t\t50% refund, minus the service fee\n
        \n
    Danger - 7 days before check-in\n
    \t\t\t\t\tNo refund\n
    \t\t\t\t\tCheck-in
    </string>

    <string name="content2">To protect your payment, never transfer money or communicate outside of the HomestayNearby app</string>

    <string name="aboutUs">HomestayNearby is one of the fastest growing online travel application in Malaysia, travellers can book everything they need for a holiday, activities of every kind and travel services to complement.</string>

    <string name="andSymbol">RATINGS &amp; REVIEWS</string>

    <string name="error">Oops, Sorry this content isn"'"t available right now!</string>

    <string name="excuse">Something went wrong. We"'"re working on getting it fixed as soon as we can</string>

    <string name="cms">It is coming soon!</string>

</resources>
