<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomestayPost.PostUpdateActivity">

    <include
        android:id="@+id/find_toolbar"
        layout="@layout/app_bar_layout">
    </include>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_toolbar"
        android:paddingTop="10dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PHOTOS"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="130dp"
                android:scrollbars="horizontal">

                <LinearLayout
                    android:id="@+id/R1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgView"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:padding="10dp"
                        android:background="@drawable/ic_add_a_photo_black_24dp"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:padding="10dp"
                        android:background="@drawable/ic_add_a_photo_black_24dp"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:padding="10dp"
                        android:background="@drawable/ic_add_a_photo_black_24dp"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:padding="10dp"
                        android:background="@drawable/ic_add_a_photo_black_24dp"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:padding="10dp"
                        android:background="@drawable/ic_add_a_photo_black_24dp"/>
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CATEGORY"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/msPropertyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:entries="@array/propertyCat"
                    android:prompt="@string/propertyTitle">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--                    <LinearLayout
                                        android:id="@+id/R11"
                                        android:layout_width="match_parent"
                                        android:layout_height="200dp"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/tvImage1"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="Pictures" />

                                        <ImageView
                                            android:id="@+id/imgView2"
                                            android:layout_width="150dp"
                                            android:layout_height="150dp"
                                            android:layout_gravity="center"
                                            android:adjustViewBounds="true"
                                            android:background="@drawable/ic_add_a_photo_black_24dp"
                                            android:scaleType="center" />
                                    </LinearLayout>-->

                <TextView
                    android:id="@+id/tvDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ITEM INFORMATION"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Homestay Name"
                            android:inputType="textPersonName" />

                        <Spinner
                            android:id="@+id/msBedrooms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:entries="@array/bedroomsCat"
                            android:prompt="@string/bedroomsTitle">
                        </Spinner>

                        <Spinner
                            android:id="@+id/msBathroom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:entries="@array/bathroomCat"
                            android:prompt="@string/bathroomTitle">
                        </Spinner>

                        <TextView
                            android:id="@+id/tvFurnished"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Furnished"/>

                        <RadioGroup
                            android:id="@+id/rgFurnished"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rbFully"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/fully" />

                            <RadioButton
                                android:id="@+id/rbPartially"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/partially" />

                        </RadioGroup>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvFacility"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Facilities"/>

                            <CheckBox android:id="@+id/cbAircond"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ac" />

                            <CheckBox android:id="@+id/cbCooking"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cooking" />

                            <CheckBox android:id="@+id/cbInternet"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/internet" />

                            <CheckBox android:id="@+id/cbWashingMachine"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wm" />

                        </LinearLayout>

                        <EditText
                            android:id="@+id/editTextDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Details"
                            android:inputType="textPersonName" />

                        <TextView
                            android:id="@+id/tvLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="LOCATION"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/editTextLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Address"
                            android:inputType="textPersonName" />

                        <TextView
                            android:id="@+id/tvPayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="PAYMENT INFORMATION"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/editTextPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Price"
                            android:inputType="textPersonName" />

                        <TextView
                            android:id="@+id/tvCntc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CONTACTS INFORMATION"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/editTextContact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Contact No."
                            android:inputType="textPersonName" />

                        <!--testing lat lang-->
                        <EditText
                            android:id="@+id/editTextLat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Lat"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/editTextLang"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Lang"
                            android:inputType="textPersonName" />

                        <!--testing lat lang-->

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btnUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="7dp"
                            android:background="@drawable/btn_rounded"
                            android:text="Update"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>